# wingman

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  docker-compose.yml  docker-entrypoint.dev.sh  docker-entrypoint.prod.sh  manage.py  pyproject.toml
.github/workflows/: deploy-test.yml
chat/: consumers.py  urls.py  views.py
chat/agent/: __init__.py  agent_tools.py  gpt_agent.py  message.py
core/: urls.py
tools/: shell.nix
wingman/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
