[tool.poetry]
name = "wingman"
version = "0.1.0"
description = "Wingman: The virtual assistant backend for Ozia Solution"
authors = [
    "Lilian Schall <lilian.schall@epita.fr>",
    "Quentin Kuttler <quentin.kuttler@epita.fr"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.3.4"
django = "^4.2.7"

[tool.poetry.scripts]
wingman = 'wingman:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
