[tool.poetry]
name = "wingman"
version = "0.1.0"
description = "Wingman: The virtual assistant backend for Ozia Solution"
authors = [
    "Lilian Schall <lilian.schall@epita.fr>",
    "Quentin Kuttler <quentin.kuttler@epita.fr"
]
readme = "README.md"

[tool.poetry.dependencies]
sentence-transformers = "^3.3.1"
python = "^3.10"
openai = "^1.3.4"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"
channels = "^4.0.0"
daphne = "^4.0.0"
elasticsearch = "^8.12.0"

[tool.poetry.scripts]
wingman = 'wingman:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
